5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1771_1183.log
== TEST (2019-05-29 22:45:14) 
-- CODE:
n = array(eval(input("digite um vetor de elementos: ")))
nega = posi = 0
while n != 0:
	if n % 2 = 0:
		posi = posi + 1
	else:
		nega = nega + 1
	while nega != 0:
	print(nega)
-- ERROR:
File "XXXX", line 4
    if n % 2 = 0:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:45:23) 
-- CODE:
n = array(eval(input("digite um vetor de elementos: ")))
nega = posi = 0
while n != 0:
	if n % 2 == 0:
		posi = posi + 1
	else:
		nega = nega + 1
	while nega != 0:
	print(nega)
-- ERROR:
File "XXXX", line 9
    print(nega)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:45:34) 
-- CODE:
n = array(eval(input("digite um vetor de elementos: ")))
nega = posi = 0
while n != 0:
	if n % 2 == 0:
		posi = posi + 1
	else:
		nega = nega + 1
	while nega != 0:
print(nega)
-- ERROR:
File "XXXX", line 9
    print(nega)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:45:41) 
-- CODE:
n = array(eval(input("digite um vetor de elementos: ")))
nega = posi = 0
while n != 0:
	if n % 2 == 0:
		posi = posi + 1
	else:
		nega = nega + 1
	while nega != 0:
		print(nega)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:45:59) 
-- CODE:
n = array(eval(input("digite um vetor de elementos: ")))
nega = posi = 0
while n != 0:
	if n % 2 == 0:
		posi = posi + 1
	else:
		nega = nega + 1
	while nega != 0:
		print(nega)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:22) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:34) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:59) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
i = (vet[n])
posi = nega = 0
while i % 2 == 0 and n != 0:
	print(n)
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:11) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
i = [n]
posi = nega = 0
while i % 2 == 0 and n != 0:
	print(n)
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:21) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
i = [n]
posi = nega = 0
while i % 2 == 0 and n != 0:
	print(n)
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:00) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
while n[1:] % 2 == 0:
	posi = posi + 1
print(posi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:01) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
while n[1:] % 2 == 0:
	posi = posi + 1
print(posi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:07) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
while n[1:] % 2 == 0:
	posi = posi + 1
print(posi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:43) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
while n[1:] % 2 == 0:
	posi = posi + 1
print(posi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:10) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
while n.all() % 2 == 0:
	posi = posi + 1
print(posi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:28) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
while n.any() % 2 == 0:
	posi = posi + 1
print(posi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:40) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
while n.any() % 2 == 0:
	posi = posi + 1
print(posi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:48) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
while n % 2 == 0:
	posi = posi + 1
print(posi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:17) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
while n % 2 == 0:
	posi = posi + 1
print(posi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:55:14) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
for elem in lista:
	if elem % 2 == 0:
		posi = posi + 1
	print(posi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:55:24) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
for elem in n:
	if elem % 2 == 0:
		posi = posi + 1
	print(posi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:55:49) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
for elem in n:
	if elem % 2 == 0:
		print(elem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:56:00) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
for elem in n:
	if elem % 2 == 0:
		print(elem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:56:00) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
for elem in n:
	if elem % 2 == 0:
		print(elem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:06:03) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
while elem from n !=0:
	print(elem)
	
-- ERROR:
File "XXXX", line 4
    while elem from n !=0:
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:07:28) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
while posi % 2 == 0:
	print(posi)
	posi = posi + 1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:07:34) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
while posi % 2 == 0:
	print(posi)
	posi = posi + 1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:10:31) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
while n[0:2]:
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:10:37) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
posi = 0
while n[0:2]:
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:13:50) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
n2 = n1
n2.remove(1,3,5,8)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:13:58) 
-- CODE:
from numpy import*
n = array(eval(input("digite um vetor de elementos: ")))
n2 = n
n2.remove(1,3,5,8)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
